cmake_minimum_required(VERSION 3.15)

project(advent-of-code VERSION 1.0 LANGUAGES CXX)

add_compile_options(-Wall -Wextra -Wpedantic -Werror)

# day 01
add_executable(01_first 01/first.cpp)
add_executable(01_second 01/second.cpp)
# day 02
add_executable(02_first 02/first.cpp)
add_executable(02_second 02/second.cpp)
# day 03
add_executable(03_first 03/first.cpp)
add_executable(03_second 03/second.cpp)
# day 04
add_executable(04_first 04/first.cpp)
add_executable(04_second 04/second.cpp)
# day 05
add_executable(05_first 05/first.cpp)
add_executable(05_second 05/second.cpp)
# day 06
add_executable(06_first 06/first.cpp)
add_executable(06_second 06/second.cpp)
# day 07
add_executable(07_first 07/first.cpp)
add_executable(07_second 07/second.cpp)
# day 08
add_executable(08_first 08/first.cpp)
add_executable(08_second 08/second.cpp)
# day 09
add_executable(09_first 09/first.cpp)
add_executable(09_second 09/second.cpp)
# day 10
add_executable(10_first 10/first.cpp)
add_executable(10_second 10/second.cpp)
# day 11
add_executable(11_first 11/first.cpp)
add_executable(11_second 11/second.cpp)
# day 12
add_executable(12_first 12/first.cpp)
add_executable(12_second 12/second.cpp)
# day 13
add_executable(13_first 13/first.cpp)
add_executable(13_second 13/second.cpp)
# day 15
add_executable(15_first 15/first.cpp)
add_executable(15_second 15/second.cpp)
